[package]
name = "rayjudge"
version = "0.1.0"
authors = ["hez2010 <hez2010@outlook.com>", "xfoxfu <i@xfox.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-amqp = "0.1.6"
lapin = "1.4.1"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
