[package]
name = "rayjudge"
version = "0.1.0"
authors = ["hez2010 <hez2010@outlook.com>", "xfoxfu <i@xfox.me>", "gw98 <i@yvettegwen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-amqp = "0.1.6"
async-std = {version = "1.8.0", features = ["attributes"]}
lapin = "1.4.1"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
env_logger = "0.8.2"
once_cell = "1.5.2"
async-trait = "0.1.42"
concurrent-queue = "1.2.2"
lazy_static = "1.4.0"
std-semaphore = "0.1.0"