[package]
name = "rayjudge"
version = "0.1.0"
authors = ["hez2010 <hez2010@outlook.com>", "xfoxfu <i@xfox.me>", "gw98 <i@yvettegwen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-amqp = "1.2.0"
async-std = { version = "1.9.0", features = ["attributes"] }
lapin = "1.6.8"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
env_logger = "0.8.3"
once_cell = "1.7.0"
async-trait = "0.1.42"
concurrent-queue = "1.2.2"
lazy_static = "1.4.0"
std-semaphore = "0.1.0"
clap = "3.0.0-beta.2"
log = "0.4.14"
protobuf = "2.22.0"
